--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,9 +3,31 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
+
     <welcome-file-list>
         <welcome-file>index.html</welcome-file>
     </welcome-file-list>
+
+    <filter>
+        <filter-name>characterEncodingFilter</filter-name>
+        <filter-class>com.csl.classroom.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF-8</param-value>
+        </init-param>
+    </filter>
+    <filter-mapping>
+        <filter-name>characterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <filter>
+        <filter-name>jwtFilter</filter-name>
+        <filter-class>com.csl.classroom.filter.JwtFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>jwtFilter</filter-name>
+        <url-pattern>/api/*</url-pattern>
+    </filter-mapping>
 
     <servlet>
         <servlet-name>buildingServlet</servlet-name>
@@ -63,25 +85,12 @@
         <servlet-name>userServlet</servlet-name>
         <url-pattern>/api/user</url-pattern>
     </servlet-mapping>
-
-    <filter>
-        <filter-name>characterEncodingFilter</filter-name>
-        <filter-class>com.csl.classroom.filter.CharacterEncodingFilter</filter-class>
-        <init-param>
-            <param-name>encoding</param-name>
-            <param-value>UTF-8</param-value>
-        </init-param>
-    </filter>
-    <filter-mapping>
-        <filter-name>characterEncodingFilter</filter-name>
-        <url-pattern>/*</url-pattern>
-    </filter-mapping>
-    <filter>
-        <filter-name>jwtFilter</filter-name>
-        <filter-class>com.csl.classroom.filter.JwtFilter</filter-class>
-    </filter>
-    <filter-mapping>
-        <filter-name>jwtFilter</filter-name>
-        <url-pattern>/api/*</url-pattern>
-    </filter-mapping>
+    <servlet>
+        <servlet-name>dashboardServlet</servlet-name>
+        <servlet-class>com.csl.classroom.servlet.DashboardServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>dashboardServlet</servlet-name>
+        <url-pattern>/api/dashboard</url-pattern>
+    </servlet-mapping>
 </web-app>
